--- a/index.html
+++ b/index.html
@@ -91,11 +91,9 @@
             <div class="b_slide" style="background-image: url(assets/images/template-one/banner.jpg);">
                 <div class="container">
                     <div class="banner_caption text-center">
-                        <h3 data-animation="fadeInLeft" data-delay="0.5s">SMART AND PROFESSIONAL</h3>
-                        <h1 data-animation="fadeInLeft" data-delay="0.9s">Bevy Digital Agency</h1>
-                        <p data-animation="fadeInLeft" data-delay="1.3s">Lorem Ipsum is simply dummy text of the
-                            printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                            dummy text ever since the 1500s</p>
+                        <h3 data-animation="fadeInLeft" data-delay="0.5s">A Land</h3>
+                        <h1 data-animation="fadeInLeft" data-delay="0.9s">Dubai Metaverse</h1>
+                        <p data-animation="fadeInLeft" data-delay="1.3s">Join our servers and enjoy from open-world 3D Metaverse!</p>
                         <a href="#" class="btn btn_white" data-animation="fadeInUp" data-delay="1.6s">Read More</a>
                         <a href="#" class="btn btn_outline" data-animation="fadeInUp" data-delay="1.6s">Our Portfolio</a>
                     </div>
@@ -162,9 +160,9 @@
                 <div class="col-lg-3 col-md-6 col-sm-6 wow slideInUp" data-wow-duration=".5s" data-wow-delay="0s">
                     <div class="what-we-do-item text-center mt-30">
                         <i class="fa fa-laptop-code"></i>
-                        <h5 class="title">IT Soluations</h5>
+                        <h5 class="title">AI System</h5>
                         <p>Sed ut perspiciatis unde omnis iste natus error volup</p>
-                        <a href="case-details.html"><i class="fa fa-arrow-right"></i></a>
+                        <a href="#"><i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 wow slideInUp" data-wow-duration="1s" data-wow-delay="0s">
@@ -172,7 +170,7 @@
                         <i class="fa fa-fingerprint"></i>
                         <h5 class="title">Security System</h5>
                         <p>Sed ut perspiciatis unde omnis iste natus error volup</p>
-                        <a href="case-details.html"><i class="fa fa-arrow-right"></i></a>
+                        <a href="#"><i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 wow slideInUp" data-wow-duration="1.5s" data-wow-delay="0s">
@@ -180,7 +178,7 @@
                         <i class="fa fa-chalkboard"></i>
                         <h5 class="title">Web Development</h5>
                         <p>Sed ut perspiciatis unde omnis iste natus error volup</p>
-                        <a href="case-details.html"><i class="fa fa-arrow-right"></i></a>
+                        <a href="#"><i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 wow slideInUp" data-wow-duration="2s" data-wow-delay="0s">
@@ -188,7 +186,7 @@
                         <i class="fa fa-database"></i>
                         <h5 class="title">Database Security</h5>
                         <p>Sed ut perspiciatis unde omnis iste natus error volup</p>
-                        <a href="case-details.html"><i class="fa fa-arrow-right"></i></a>
+                        <a href="#"><i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -229,9 +227,7 @@
             <div class="sec_header text-center">
                 <h2 class="sec_heading wow fadeInLeft"><span>OUR LATEST SERVICES</span>We Offer Better Soluation For
                     Your IT Business</h2>
-                <p class="wow fadeInLeft">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis
-                    pulvinar vestibulum. Doneceleifend, sem sed dictum. Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elits</p>
+                <p class="wow fadeInLeft"></p>
             </div>
             <div class="servics_list">
                 <div class="row">
@@ -671,9 +667,7 @@
         <div class="sec_header text-center">
             <div class="container">
                 <h2 class="sec_heading wow fadeInUp"><span>Contact us</span>Let's create Progress together</h2>
-                <p class="wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis
-                    pulvinar vestibulum. Doneceleifend, sem sed dictum. Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elits</p>
+                <p class="wow fadeInUp"></p>
             </div>
         </div>
 
