--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
                                     <li class="menu-item">
                                         <a href="#about">About</a>
                                     </li>
-                                    <li class="menu-item">
-                                        <a href="#service">services</a>
-                                    </li>
+                                  
                                     <li class="menu-item">
                                         <a href="#team">team</a>
                                     </li>
@@ -102,8 +100,8 @@
             <div class="b_slide" style="background-image: url(assets/images/template-one/banner2.jpg);">
                 <div class="container">
                     <div class="banner_caption text-center">
-                        <h3 data-animation="fadeInLeft" data-delay="0.5s">SMART AND PROFESSIONAL</h3>
-                        <h1 data-animation="fadeInLeft" data-delay="0.9s">Bevy Digital Agency</h1>
+                        <h3 data-animation="fadeInLeft" data-delay="0.5s">Open-World with high quality</h3>
+                        <h1 data-animation="fadeInLeft" data-delay="0.9s">A Land: Dubai Metaverse</h1>
                         <p data-animation="fadeInLeft" data-delay="1.3s">Lorem Ipsum is simply dummy text of the
                             printing and typesetting industry. Lorem Ipsum has been the industry's standard
                             dummy text ever since the 1500s</p>
