--- a/index.html
+++ b/index.html
@@ -101,10 +101,8 @@
                 <div class="container">
                     <div class="banner_caption text-center">
                         <h3 data-animation="fadeInLeft" data-delay="0.5s">Open-World with high quality</h3>
-                        <h1 data-animation="fadeInLeft" data-delay="0.9s">A Land: Dubai Metaverse</h1>
-                        <p data-animation="fadeInLeft" data-delay="1.3s">Lorem Ipsum is simply dummy text of the
-                            printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                            dummy text ever since the 1500s</p>
+                        <h1 data-animation="fadeInLeft" data-delay="0.9s">A Land</h1>
+                        <p data-animation="fadeInLeft" data-delay="1.3s">Dubai Metaverse mostlly focused on Bussiness Bay are in Dubai.</p>
                         <a href="#" class="btn btn_white" data-animation="fadeInUp" data-delay="1.6s">Read More</a>
                         <a href="#" class="btn btn_outline" data-animation="fadeInUp" data-delay="1.6s">Our Portfolio</a>
                     </div>
