--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             <div class="b_slide" style="background-image: url(assets/images/template-one/banner2.jpg);">
                 <div class="container">
                     <div class="banner_caption text-center">
-                        <h3 data-animation="fadeInLeft" data-delay="0.5s">Open-World with high quality</h3>
-                        <h1 data-animation="fadeInLeft" data-delay="0.9s">A Land</h1>
+                        <h3 data-animation="fadeInLeft" data-delay="0.5s">A Land</h3>
+                        <h1 data-animation="fadeInLeft" data-delay="0.9s">First open-world in Dubai</h1>
                         <p data-animation="fadeInLeft" data-delay="1.3s">Dubai Metaverse mostlly focused on Bussiness Bay are in Dubai.</p>
                         <a href="#" class="btn btn_white" data-animation="fadeInUp" data-delay="1.6s">Read More</a>
                         <a href="#" class="btn btn_outline" data-animation="fadeInUp" data-delay="1.6s">Our Portfolio</a>
@@ -111,11 +111,9 @@
             <div class="b_slide" style="background-image: url(assets/images/template-one/banner3.jpg);">
                 <div class="container">
                     <div class="banner_caption text-center">
-                        <h3 data-animation="fadeInLeft" data-delay="0.5s">SMART AND PROFESSIONAL</h3>
+                        <h3 data-animation="fadeInLeft" data-delay="0.5s">A Land</h3>
                         <h1 data-animation="fadeInLeft" data-delay="0.9s">Bevy Digital Agency</h1>
-                        <p data-animation="fadeInLeft" data-delay="1.3s">Lorem Ipsum is simply dummy text of the
-                            printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                            dummy text ever since the 1500s</p>
+                        <p data-animation="fadeInLeft" data-delay="1.3s">Play as an 3rd person character and explore Dubai in Metaverse!</p>
                         <a href="#" class="btn btn_white" data-animation="fadeInUp" data-delay="1.6s">Read More</a>
                         <a href="#" class="btn btn_outline" data-animation="fadeInUp" data-delay="1.6s">Our Portfolio</a>
                     </div>
