--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bevy - template-Three</title>
+    <title>A Land: Dubai Metaverse!</title>
+    <meta name="description" content="First Metaverse game baed on reallity in Dubai">
 
     <!-- External CSS -->
     <link type="text/css" rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -112,7 +113,7 @@
                 <div class="container">
                     <div class="banner_caption text-center">
                         <h3 data-animation="fadeInLeft" data-delay="0.5s">A Land</h3>
-                        <h1 data-animation="fadeInLeft" data-delay="0.9s">Bevy Digital Agency</h1>
+                        <h1 data-animation="fadeInLeft" data-delay="0.9s">3D Metaverse</h1>
                         <p data-animation="fadeInLeft" data-delay="1.3s">Play as an 3rd person character and explore Dubai in Metaverse!</p>
                         <a href="#" class="btn btn_white" data-animation="fadeInUp" data-delay="1.6s">Read More</a>
                         <a href="#" class="btn btn_outline" data-animation="fadeInUp" data-delay="1.6s">Our Portfolio</a>
